CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("rpg2kemu" CXX)

# rpg2kLib things
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rpg2kLib)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/rpg2kLib/rpg2kLib.cmake)
FIND_RPG2KLIB(${CMAKE_CURRENT_SOURCE_DIR}/rpg2kLib)

# game code
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/game SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${rpg2kLib_LIBRARIES})

ADD_DEPENDENCIES(${PROJECT_NAME} "rpg2kLib")
