CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT("rpg2kemu" CXX)

# rpg2kLib things
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rpg2kLib)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/rpg2kLib/rpg2kLib.cmake)
INCLUDE_DIRECTORIES(${rpg2kLib_INCLUDE_DIRS})
ADD_DEFINITIONS(${rpg2kLib_DEFINITIONS})
LINK_DIRECTORIES(${rpg2kLib_LIBRARY_DIRS})

# output path
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

# game code
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRCS)
ADD_EXECUTABLE(${PROJECT_NAME} MACOSX_BUNDLE ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${rpg2kLib_LIBRARIES})

ADD_DEPENDENCIES(${PROJECT_NAME} "rpg2kLib")

# test
ENABLE_TESTING()
