CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(TARGET "rpg2kLib")

IF((${CMAKE_CXX_COMPILER_ID} MATCHES "GNU") OR (${CMAKE_CXX_COMPILER_ID} MATCHES "Clang"))
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror")
ENDIF()

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS(-DRPG2K_DEBUG=1)
ELSE()
	ADD_DEFINITIONS(-DRPG2K_DEBUG=0)
ENDIF()

# Boost
FIND_PACKAGE(Boost REQUIRED)
INCLUDE_DIRECTORIES(BEFORE ${Boost_INCLUDE_DIRS})

# rpg2kLib code
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/rpg2kLib/rpg2k SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/rpg2kLib/rpg2k/define SRCS)
ADD_LIBRARY(${TARGET} STATIC ${SRCS})
TARGET_LINK_LIBRARIES(${TARGET}
	${Boost_LIBRARIES}
)
